# follow_me_robot

data_for_labs/: follow_me.rviz2.rviz
data_for_labs/follow_me/detection/new_laser/detection_robot_deplace/: metadata.yaml
data_for_labs/follow_me/detection/new_laser/detection_robot_statique/: metadata.yaml
data_for_labs/follow_me/detection/old_laser/: detection01.bag2  detection02.bag2  detection04.bag2  detection05.bag2  detection06.bag2
data_for_labs/follow_me/tracking/new_laser/tracking1/: metadata.yaml
data_for_labs/follow_me/tracking/old_laser/: tracking02.bag2  tracking03.bag2  tracking04.bag2
src/action/: CMakeLists.txt  package.xml
src/action/include/: action.hpp
src/action/src/: action_node.cpp  robot_moving_always_false_node.cpp  robot_moving_node.cpp  rotation_node.cpp  translation_node.cpp
src/follow_me/: CMakeLists.txt  package.xml
src/follow_me/config/: laser_only.rviz
src/follow_me/include/: datmo.hpp
src/follow_me/scripts/: start_robair_detection_only.sh  start_robair_tracking_with_action.sh
src/follow_me/src/: datmo.cpp  detection_node.cpp  obstacle_detection_node.cpp  tracking_node.cpp
src/smooth_teleop/: README.md  package.xml  setup.cfg  setup.py
src/smooth_teleop/smooth_teleop/: smooth_teleop_node.py
src/tutorial_ros/: CMakeLists.txt  README.md  package.xml
src/tutorial_ros/config/: laser_only.rviz
src/tutorial_ros/src/: laser_graphical_display_node.cpp
