<?xml version="1.0"?>
<package format="3">
  <name>tutorial_ros</name>
  <version>0.0.1</version>
  <description>tutorial_ros package to see how to set up a ROS2 node to sub and pub data"</description>

  <maintainer email="olivier@todo.todo">olivier</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- À adapter selon les dépendances réelles -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
